Se añade avance del proyecto, funcionalidad de register y login correctas, añadiendo asi contenido a diversos archivos

--- a/.env
+++ b/.env
@@ -1,3 +1,1 @@
-MONGO_URI=<TU_URL_DE_MONGODB_ATLAS>
-PORT=5000
-JWT_SECRET=<UN_SECRETO_PARA_TU_TOKENS>
+MONGO_URI=mongodb+srv://Macx3:Maxito2006!@cluster0.xy4bvgb.mongodb.net/test?retryWrites=true&w=majority&appName=Cluster0
